<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.b07finalproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.b07finalproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.b07finalproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_announcements"
        android:name="com.example.b07finalproject.ui.announcements.AnnouncementsFragment"
        android:label="@string/menu_announcements"
        tools:layout="@layout/announ_view_item" >
        <action
            android:id="@+id/action_nav_announcements_to_nav_postannoun"
            app:destination="@id/nav_postannoun" />
    </fragment>


    <fragment
        android:id="@+id/nav_postannoun"
        android:name="com.example.b07finalproject.ui.announcements.PostAnnounFragment"
        android:label="@string/menu_postannoun"
        tools:layout="@layout/fragment_new_announ" >
        <action
            android:id="@+id/action_nav_postannoun_to_nav_announcements"
            app:destination="@id/nav_announcements" />
    </fragment>

</navigation>